# smash-vhlle-hybrid

./: .gitignore  .mailmap  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Hybrid-handler  LICENSE  README.md  mkdocs.yml  set_up_hybrid.sh  versions.json
.github/workflows/: github-actions-on-github-servers.yml
2.0/: 404.html  index.html  sitemap.xml
2.0/developer/: index.html
2.0/developer/building_docs/: index.html
2.0/developer/contributing/: index.html
2.0/developer/parameters_scan/: index.html
2.0/developer/release_procedure/: index.html
2.0/search/: search_index.json
2.0/user/: index.html
2.0/user/FAQ/: index.html
2.1/: 404.html  index.html  sitemap.xml
2.1.1/: 404.html  index.html  sitemap.xml
2.1.1/developer/: index.html
2.1.1/search/: search_index.json
2.1.1/stylesheets/: extra.css
2.1.1/user/: index.html
2.1/developer/: index.html
2.1/search/: search_index.json
2.1/user/: index.html
bash/: Afterburner_functionality.bash  FIST_sampler_functionality.bash  Hydro_functionality.bash  IC_functionality.bash  SMASH_sampler_functionality.bash  Sampler_functionality.bash  Sampler_functionality_FIST.bash  Sampler_functionality_SMASH.bash  common_functionality.bash  configuration_parser.bash  dispatch_functions.bash  error_codes.bash  execution_mode_do.bash  execution_mode_prepare.bash  formatter.bash  global_variables.bash  logger.bash  parameters_scan.bash  parameters_scan_validation.bash  progress_bar.bash  sanity_checks.bash  scan_files_operations.bash  scan_validation.bash  scan_values_operations.bash  software_input_functionality.bash  software_operations.bash  source_codebase_files.bash  system_requirements.bash  utility_functions.bash  version.bash
bash/command_line_parsers/: allowed_options.bash  helper.bash  main_parser.bash  sub_parser.bash
configs/: README.md  fist_config  hadron_sampler  hadron_sampler__ge_v3.2  hadron_sampler__lt_v3.2  hadron_sampler_from_version_3.2_on  smash_afterburner.yaml  smash_initial_conditions.yaml  smash_initial_conditions_AuAu.yaml  smash_initial_conditions_PbPb.yaml  smash_initial_conditions_RuRu.yaml  smash_initial_conditions_ZrZr.yaml  smash_initial_conditions__ge_v3.2.yaml  smash_initial_conditions_custom.yaml  smash_initial_conditions_test.yaml  vhlle_hydro
configs/AuAu_200.0GeV/: smash_afterburner.yaml  smash_initial_conditions.yaml
configs/AuAu_39.0GeV/: smash_afterburner.yaml  smash_initial_conditions.yaml
configs/AuAu_7.7GeV/: smash_afterburner.yaml  smash_initial_conditions.yaml  vhlle_hydro
configs/AuAu_8.8GeV/: hadron_sampler  smash_afterburner.yaml  smash_initial_conditions.yaml  vhlle_hydro
configs/PbPb_17.3GeV/: smash_initial_conditions.yaml  vhlle_hydro
configs/predef_configs/: config_AuAu_130.0.yaml  config_AuAu_200.0.yaml  config_AuAu_27.0.yaml  config_AuAu_39.0.yaml  config_AuAu_4.3.yaml  config_AuAu_62.4.yaml  config_AuAu_7.7.yaml  config_PbPb_17.3.yaml  config_PbPb_2760.0.yaml  config_PbPb_5020.0.yaml  config_PbPb_6.4.yaml  config_PbPb_8.8.yaml  config_TEST.yaml
configs/targets/: config_AuAu_130.0.yaml  config_AuAu_39.0.yaml  config_PbPb_17.3.yaml  config_PbPb_2760.0.yaml  config_PbPb_5020.0.yaml
develop/: 404.html  index.html  sitemap.xml
develop/developer/: index.html
develop/search/: search_index.json
develop/user/: index.html
docs/: index.md  prerequisites.md
docs/developer/: building_docs.md  contributing.md  documentation.md  index.md  new_module.md  parameters_scan.md  release_procedure.md  testing_framework.md  utility_functions.md
docs/stylesheets/: extra.css
docs/user/: changelog.md  configuration-file.md  configuration_file.md  docker_image.md  execution_modes.md  index.md  overview.md  predef-configs.md  predefined_configs.md  prerequisites.md  scans_syntax.md  scans_types.md
python/: add_corona.py  add_spectators.py  average_endtimes.py  average_flow.py  create_vhlle_config.py  latin_hypercube_sampling.py  plot_excitation_functions.py  plot_int_vn.py  plot_spectra.py  requirements.txt  test_requirement.py
python_scripts/: add_spectators.py  assemble_endtimes.py  average_E_cons.py  average_flow.py  average_freezeout_diagram.py  average_spectra.py  check_conservation.py  check_energy_conservation.py  check_multiplicities.py  collect_T_muB.py  convert_freezeout_to_3D.py  create_sampler_config.py  create_vhlle_config.py  extract_hypersurface_contributions.py  freezeout_2D_to_3D.py  get_hydro_endtime.py  hydro_parameters.py  plot_E_cons.py  plot_excitation_functions.py  plot_freezeout_T_muB.py  plot_int_vn.py  plot_spectra.py  update_output_path_and_tau.py
tests/: .gitignore  command_line_parser_for_tests.bash  functional_tests  functional_tests.bash  functional_tests_Afterburner_only.bash  functional_tests_Hydro_functionality.bash  functional_tests_Hydro_only.bash  functional_tests_IC_only.bash  functional_tests_Sampler_only.bash  functional_tests_full_workflow.bash  functional_tests_help.bash  functional_tests_id_from_command_line.bash  functional_tests_specific_code.bash  functional_tests_version.bash  integration_tests.bash  integration_tests_custom_base_configuration.bash  integration_tests_custom_inputfile.bash  python_requirements.txt  tests_runner  unit_tests.bash  unit_tests_Afterburner_functionality.bash  unit_tests_Hydro_functionality.bash  unit_tests_IC_functionality.bash  unit_tests_Sampler_functionality.bash  unit_tests_command_line_parser.bash  unit_tests_configuration.bash  unit_tests_custom_base_configuration.bash  unit_tests_formatting.bash  unit_tests_help_for_user.bash  unit_tests_parameters_scan.bash  unit_tests_scan_files_operations.bash  unit_tests_scan_validation.bash  unit_tests_scan_values_operations.bash  unit_tests_software_input_functionality.bash  unit_tests_software_operations.bash  unit_tests_specific_code.bash  unit_tests_system_requirements.bash  unit_tests_utility_functions.bash  unit_tests_version.bash  utility_functions.bash  (+3 more)
tests/mocks/: echo.py  fist_sampler_black-box.py  sampler_black-box.py  sampler_black_box.py  smash_IC_black-box.py  smash_afterburner_black-box.py  vhlle_black-box.py
(+58 files in other folders)
